k8s-mesh/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-mesh
  labels:
    istio-injection: enabled
