k8s-mesh/03-product-catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog
  namespace: ecommerce-mesh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-catalog
  template:
    metadata:
      labels:
        app: product-catalog
    spec:
      imagePullSecrets:
      - name: acr-secret
      containers:
      - name: api
        image: haiwebappregistry.azurecr.io/ecommerce-product-catalog:v1
        ports:
        - containerPort: 80
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: product-catalog
  namespace: ecommerce-mesh
spec:
  selector:
    app: product-catalog
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: mysql
    port: 3306
    targetPort: 3306
