k8s-mesh/01-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ecommerce-gateway
  namespace: ecommerce-mesh
spec:
  infrastructure:
    annotations:
      service.beta.kubernetes.io/port_443_health-probe_protocol: tcp
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
  - name: https
    hostname: "ecommerce.haile.click"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: ecommerce-mesh-tls-le
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ecommerce-route
  namespace: ecommerce-mesh
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: ecommerce-gateway
    sectionName: http
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: ecommerce-gateway
    sectionName: https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/products
    backendRefs:
    - group: ""
      kind: Service
      name: product-catalog
      port: 80
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: /api/cart
    backendRefs:
    - group: ""
      kind: Service
      name: cart-service
      port: 80
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: /api/checkout
    backendRefs:
    - group: ""
      kind: Service
      name: stripe-server
      port: 4242
      weight: 1
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: frontend
      port: 80
      weight: 1
